force-app/main/default/objects/Passport__c/Passport__c.object-meta.xml
<CustomObject>
    <label>Passport</label>
    <nameField>
        <displayFormat>PID-{00000}</displayFormat>
        <label>Passport ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passport</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>