force-app/main/default/objects/Passport__c/fields/Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_date__c</fullName>
    <formula>ADDMONTHS(Issue_date__c  ,120)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry date</label>
    <type>Date</type>
</CustomField>